Clean up footer, add now page, update header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,15 @@
         </div>
     </main>
 
-    {%- include footer.html -%}
+    <footer class="site-footer">
+        <div class="footer-col">
+            <a href="mailto:kkyars@ualberta.ca">kkyars@ualberta.ca</a> |
+            <a href="https://github.com/kiankyars">GitHub</a> |
+            <a href="https://twitter.com/neuralkian">Twitter</a>
+            <br>
+            <span>Kian Kyars's personal blog</span>
+        </div>
+    </footer>
 </body>
 
 </html>
