Restore header, head, and homepage for Jekyll formatting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="site-nav">
   <a href="/blog/">Home</a>
-  <a href="/blog/pages/about">About</a>
-  <a href="/blog/pages/now">Now</a>
+  <a href="/blog/about">About</a>
+  <a href="/blog/now">Now</a>
 </nav> 
