change Reference links in top left corner.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="site-nav">
-  <a href="/blog/">Home</a>
-  <a href="/blog/about">About</a>
-  <a href="/blog/now">Now</a>
+  <a href="/">Home</a>
+  <a href="/about">About</a>
+  <a href="/now">Now</a>
 </nav> 
