--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,6 @@
   <a href="/">Home</a>
   <a href="/about">About</a>
   <a href="/now">Now</a>
+  <a href="/projects">Projects</a>
   <a href="/graphs">Graphs</a>
 </nav> 
