--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-{%- include head.html -%}
-
 <body>
-
-    {%- include header.html -%}
+    <nav class="site-nav">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/now">Now</a>
+        <a href="/projects">Projects</a>
+        <a href="/graphs">Graphs</a>
+      </nav> 
 
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
