--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
+{%- include head.html -%}
+
 <body>
     <nav class="site-nav">
         <a href="/">Home</a>
