--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
         <a href="/now">Now</a>
         <a href="/projects">Projects</a>
         <a href="/graphs">Graphs</a>
+        <a href="/doomscrolling.md">Doomscrolling</a>
       </nav> 
 
     <main class="page-content" aria-label="Content">
