--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <a href="/projects">Projects</a>
         <a href="/graphs">Graphs</a>
         <a href="/llms">LLMS</a>
-        <a href="/doomscrolling.md">Doomscrolling</a>
+        <a href="/doomscrolling">Doomscrolling</a>
       </nav> 
 
     <main class="page-content" aria-label="Content">
