Add weekly victories to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         <a href="/graphs">Graphs</a>
         <a href="/llms">LLMS</a>
         <a href="/doomscrolling">Doomscrolling</a>
+        <a href="/weekly-victories">Weekly Victories</a>
       </nav> 
 
     <main class="page-content" aria-label="Content">
