add wrapper div

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
 <body>
     <nav class="site-nav">
+        <div class="wrapper">
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/now">Now</a>
@@ -13,6 +14,7 @@
         <a href="/llms">LLMS</a>
         <a href="/doomscrolling">Doomscrolling</a>
         <a href="/weekly-victories">Weekly Victories</a>
+        </div>
       </nav> 
 
     <main class="page-content" aria-label="Content">
