--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
         <a href="/llms">LLMS</a>
         <a href="/doomscrolling">Doomscrolling</a>
         <a href="/weekly-victories">Weekly Victories</a>
+        <a href="/tools">Tools</a>
         </div>
       </nav> 
 
