Remove university email

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
     <footer class="site-footer">
         <div class="footer-col">
-            <a href="mailto:kkyars@ualberta.ca">kkyars@ualberta.ca</a> |
+            <a href="mailto:kiankyars@gmail.com">kiankyars[at]gmail[dot]com</a> |
             <a href="https://github.com/kiankyars">GitHub</a> |
             <a href="https://twitter.com/neuralkian">Twitter</a>
         </div>
