--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
         <a href="/projects">Projects</a>
         <a href="/doomscrolling">Doomscrolling</a>
         <a href="/weekly-victories">Weekly Victories</a>
+        <a href="/blog">Blog</a>
         </div>
       </nav> 
 
