--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,12 @@
   <nav>
     <a href="/">Home</a>
     <a href="/about/">About</a>
+    <a href="/now/">Now</a>
     <a href="/blog/">Blog</a>
     <a href="/weekly-victories/">Weekly Victories</a>
     <a href="/projects/">Projects</a>
+    <a href="/awards/">Awards</a>
+    <a href="/doomscrolling/">Doomscrolling</a>
   </nav>
 
   <main>
