weekly and blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
 <body>
 
   <nav>
+    <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/awards/">Awards</a>
     <a href="/blog/">Blog</a>
     <a href="/doomscrolling/">Doomscrolling</a>
-    <a href="/">Home</a>
     <a href="/now/">Now</a>
     <a href="/weekly-victories/">Weekly Victories</a>
     <a href="/projects/">Projects</a>
@@ -49,7 +49,7 @@
 
   <footer>
     <hr>
-    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars. Built with minimal HTML.</small>
+    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars.</small>
   </footer>
 
 </body>
