feat: integrate publications page into minimalist structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,13 @@
   <nav>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <a href="/awards/">Awards</a>
-    <a href="/blog/">Blog</a>
-    <a href="/doomscrolling/">Doomscrolling</a>
     <a href="/now/">Now</a>
+    <a href="/blog/">Blog</a>
     <a href="/weekly-victories/">Weekly Victories</a>
     <a href="/projects/">Projects</a>
+    <a href="/publications/">Publications</a>
+    <a href="/awards/">Awards</a>
+    <a href="/doomscrolling/">Doomscrolling</a>
   </nav>
 
   <main>
@@ -49,7 +50,7 @@
 
   <footer>
     <hr>
-    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars.</small>
+    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars. Built with minimal HTML.</small>
   </footer>
 
 </body>
