--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,7 +150,7 @@
 
   <footer>
     <hr>
-    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars.</small>
+    <small>&copy; {{ "now" | date: "%Y" }} Kian Kyars</small>
   </footer>
 
 </body>
