Change it to build from projects, make out about better, change awards and build to be interconnected and an index. I added my Wikipedia, let's go

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@
     <a href="/about/">About</a>
     <a href="/awards/">Awards</a>
     <a href="/blog/">Blog</a>
-    <a href="/projects/">Build</a>
+    <a href="/build/">Build</a>
     <a href="/doomscrolling/">Doomscrolling</a>
     <a href="/now/">Now</a>
     <a href="/publications/">Publications</a>
